Thu Feb 17 15:58:53 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/RELEASE.html, htdoc/main.html: Add notes for 3.1.5 release.
	* htdoc/TODO.html, htdoc/author.html, htdoc/bugs.html,
	htdoc/cf_general.html, htdoc/cf_types.html, htdoc/cf_variables.html,
	htdoc/config.html, htdoc/howitworks.html, htdoc/htdig.html,
	htdoc/htfuzzy.html, htdoc/htmerge.html, htdoc/htnotify.html,
	htdoc/hts_form.html, htdoc/hts_general.html, htdoc/hts_method.html,
	htdoc/install.html, htdoc/isp.html, htdoc/mailing.html,
	htdoc/meta.html, htdoc/notification.html, htdoc/require.html,
	htdoc/uses.html, htdoc/where.html: Update copyright date and fix
	last modified date for automatic CVS update.

Thu Feb 17 14:37:18 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* installdir/htdig.conf: quote all HTML tag parameters.
	* htsearch/TemplateList.cc (createFromString), installdir/long.html,
	installdir/short.html: Use $&(URL) in templates.

Thu Feb 17 14:01:34 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* contrib/htdig-3.1.5.spec: Fix silly typos in %post script,
	make cron script a %config file.

Thu Feb 17 10:34:05 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	[ Improve htsearch's HTML 4.0 compliance ]
	* htsearch/TemplateList.cc (createFromString): Use file name rather
	than internal name to select builtin-* templates, use $&(TITLE) in
	templates and quote HTML tag parameters.
	* installdir/long.html, installdir/short.html: Use $&(TITLE) in
	templates and quote HTML tag parameters.
	* htsearch/Display.cc (setVariables): quote all HTML tag parameters
	in generated select lists.
	* installdir/footer.html, installdir/header.html,
	installdir/nomatch.html, installdir/search.html,
	installdir/syntax.html, installdir/wrapper.html:
	Use $&(var) where appropriate, and quote HTML tag parameters.

Thu Feb 17 10:00:26 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* contrib/htdig-3.1.5.spec: Fix %post script to add more descriptive
	htdig.conf entries.
